# FARFAN-3.3

./: .env.example  .gitignore  ACCEPTANCE_CRITERIA.md  ADAPTER_LAYER_IMPLEMENTATION.md  AGENTS.md  ANALISIS_CRITICO_IMPLEMENTACION.md  ANALISIS_REPO.md  ANALYZER_ONE_AUDIT_SUMMARY.md  API_IMPLEMENTATION_SUMMARY.md  AUDIT_REPORT.md  Analyzer_one.py  CHANGELOG.md  CHOREOGRAPHER_METADATA_EXTENSION.md  CODE_FIX_REPORT.md  CONSOLIDATED_ADAPTER_AUDIT_REPORT.md  CONTRIBUTING.md  CUESTIONARIO_INTEGRATION.md  DELETED_FILES.md  DEPENDENCY_CONFLICTS.md  DEPENDENCY_RESOLUTION_SUMMARY.md  DOCUMENTATION_INDEX.md  EXECUTION_GUIDE.md  FIXES_APPLIED_VERIFICATION.md  GUIA_RAPIDA_PRIMEROS_PASOS.md  HYPERADVANCED_CANARY_TEST_SUMMARY.md  IMMUTABLE_DATA_CONTRACTS_IMPLEMENTATION.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_SIN_CARRETA.md  MAPPING_LOADER_SPECIFICATION.md  MERGE_REPORT.md  MERGE_SUCCESS.md  MODULARIZATION_SUMMARY.md  ORCHESTRATOR_AUDIT_REPORT.md  README.md  REFACTORING_SUMMARY.md  RESUMEN_EJECUTIVO.md  ROADMAP_IMPLEMENTACION.md  STRUCTURE_OVERVIEW.md  analisis_repo.json  (+85 more)
adapters/: __init__.py
api/: ARCHITECTURE.md  NEW_ENDPOINTS_SUMMARY.md  README.md  __init__.py  main.py
cicd/: README.md  cognitive_complexity.py  dashboard.py  fix_bindings.py  generate_contracts.py  generate_migration.py  profile_adapters.py  rebaseline.py  run_pipeline.py  validation_gates.py
config/: __init__.py  execution_mapping.yaml  responsibility_map.json
data/: .gitkeep
delivery_package/: DELIVERY_MANIFEST.md  EXECUTION_INSTRUCTIONS.md  PACKAGE_SUMMARY.md  README_DELIVERY.md  VERIFICATION_QUICK_CHECK.sh
docs/: CANARY_IMPLEMENTATION_REPORT.md  COMPLIANCE.md  FAULT_INJECTION_FRAMEWORK_DELIVERY.md  README.md  README_DEPENDENCY_FRAMEWORK.md  SIN_CARRETA_DOCTRINE.md  SYNTAX_FIX_SUMMARY.md  TELEMETRY_SCHEMA.md  TRACEABILITY_MAPPING_SUMMARY.md  VALIDATION_QUICKSTART.md  architecture.md  function_inference_heuristics.md
domain/: __init__.py
orchestrator/: ADAPTER_LAYER_README.md  __init__.py  adapter_causal_processor.py  adapter_contradiction_detection.py  adapter_controller.py  adapter_dereck_beach.py  adapter_embedding_policy.py  adapter_financial_viability.py  adapter_policy_processor.py  choreographer.py  (+26 more)
(+500 files in other folders)
