[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "farfan"
version = "3.0.0"
description = "FARFAN 3.0 - Deterministic Policy Analysis Pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "spacy>=3.5.0",
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
    "nltk>=3.8.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "tensorflow>=2.13.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.4.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "venv*", "docs*", "scripts*", "web_dashboard*", "cicd*"]

[tool.setuptools.package-data]
config = ["*.yaml", "*.yml", "*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["."]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for component interactions",
    "e2e: End-to-end tests for full pipeline execution",
    "slow: Tests that take significant time to run",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | build
  | dist
  | data
  | logs
  | web_dashboard
  | cicd
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["src"]
skip = ["venv", "build", "dist", "data", "logs", "web_dashboard", "cicd"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "venv",
    "build",
    "dist",
    "data",
    "logs",
    "web_dashboard",
    "cicd",
]
